# multiagent-fipa_acl

./: CMakeLists.txt  Doxyfile.in  README.md  manifest.xml
bindings/ruby/: CMakeLists.txt  README.txt  Rakefile  fipa-message-ruby.pc.in  fipa-message.rb
bindings/ruby/ext/: fipa_message.cpp
bindings/ruby/fipa-message/: core.rb  test.rb
bindings/ruby/lib/fipa-message/: core.rb
cmake/: CommonSetup.cmake  FindAVAHI.cmake  FindBoost.cmake  FindGem.cmake  FindSIGC++.cmake  PkgConfigPackages.cmake
configuration/: message-parser.pc.in
configuration/protocols/: RIMRES  brokering  brokering_without_sub  contractNet  dutchAuction  inform  iteratedContractNet  query  request  request-when  subscribe  test_any_performative  with_single_subprotocol_and_not_proxied
conversation_monitor/: README
conversation_monitor/configuration/protocols/: brokering  dutchAuction
conversation_monitor/src/: StateMachine.h  StateMachineBuilder.h
resources/: spirit-info.odt
src/: ACLMessage.cpp  ACLMessage.h  ACLMessageOutputParser.cpp  ACLMessageOutputParser.h  AgentAID.cpp  AgentAID.h  AgentID.cpp  AgentID.h  CMakeLists.txt  MessageRebuilder.cpp  MessageRebuilder.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  StateMachineBuilder.cpp  StateMachineBuilder.h  Transition.cpp  Transition.h  UserdefParam.cpp  UserdefParam.h  agent_id.cpp  agent_id.h  benchmark.cpp  bitefficient_message.h  byte_sequence.h  conversation_monitor.h  debug.h  fipa_acl.h  fipa_acl.pc.in  generator.cpp  grammar_bitefficient.cpp  grammar_bitefficient.h  grammar_bitefficient_test.h  main.cpp  makefile2  message_parser.cpp  message_parser.h  message_printer.cpp  message_printer.h  (+4 more)
src/conversation_monitor/: State.cpp  State.h  StateMachineBuilder.cpp  Transition.h  conversation.cpp  conversation.h  conversation_monitor.cpp  conversation_monitor.h  main.cpp  message_archive.cpp  message_archive.h  role.cpp  role.h  state.cpp  state.h  statemachine.cpp  statemachine.h  statemachine_builder.cpp  statemachine_builder.h  statemachine_factory.cpp  statemachine_factory.h  statemachine_reader.cpp  statemachine_reader.h  transition.cpp  transition.h  types.h
src/generator/: ACLMessage.cpp  ACLMessage.h  AgentID.h  CMakeLists.txt  test.cpp
src/generator/src/: ACLMessageOutputParser.cpp  ACLMessageOutputParser.h  AgentID.cpp  makefile2  message_generator.h
src/generator/test/unit-testing/: ACLMessageTest.cpp  CMakeLists.txt
src/message_generator/: CMakeLists.txt  acl_envelope.cpp  acl_envelope.h  acl_message.cpp  acl_message.h  acl_message_envelope.cpp  acl_message_envelope.h  acl_message_output_parser.cpp  acl_message_output_parser.h  agent_id.cpp  agent_id.h  envelope_format.h  envelope_generator.cpp  envelope_generator.h  exception.h  generator.cpp  message_format.cpp  message_format.h  message_generator.cpp  message_generator.h  received_object.cpp  received_object.h  serialized_letter.cpp  serialized_letter.h  test.cpp  types.h  userdef_param.cpp  userdef_param.h
src/message_generator/format/: bitefficient_envelope_format.cpp  bitefficient_envelope_format.h  bitefficient_format.cpp  bitefficient_format.h  bitefficient_message_format.cpp  bitefficient_message_format.h  string_format.cpp  string_format.h  string_message_format.cpp  string_message_format.h  xml_envelope_format.cpp  xml_envelope_format.h  xml_format.cpp  xml_format.h  xml_message_format.cpp  xml_message_format.h
src/message_parser/: agent_id.h  bitefficient_envelope_parser.cpp  bitefficient_envelope_parser.h  bitefficient_message_parser.cpp  bitefficient_message_parser.h  byte_sequence.h  date_time.cpp  date_time.h  debug.h  envelope_parser.cpp  envelope_parser.h  grammar_bitefficient.cpp  grammar_bitefficient.h  main.cpp  message_parser.cpp  message_parser.h  message_printer.cpp  message_printer.h  parameter.h  string_message_parser.cpp  string_message_parser.h  test.cpp  types.h  xml_envelope_parser.cpp  xml_envelope_parser.h  xml_message_parser.cpp  xml_message_parser.h  xml_parser.cpp  xml_parser.h
src/message_parser/bitefficient/: grammar_bitefficient.cpp  grammar_bitefficient.h  grammar_bitefficient_envelope.cpp  grammar_bitefficient_envelope.h
src/message_parser/grammar/: grammar_bitefficient.cpp  grammar_bitefficient.h  grammar_bitefficient_envelope.cpp  grammar_bitefficient_envelope.h  grammar_common.cpp  grammar_common.h  grammar_string_message.cpp  grammar_string_message.h
src/parser/: date_time.h  grammar_bitefficient.h  grammar_bitefficient_test.h  message_printer.cpp  parameter.h  types.h
test/: CMakeLists.txt  benchmark.sh  fipa-msg-0.valid  fipa-msg-agendid.valid  visualize_results.gnuplot
test/message-parser/: README  TestMessage.txt  TestMessage12.txt  TestMessage13.txt  TestMessage15.txt  TestMessage16.txt  TestMessage17.txt  TestMessage19.txt  TestMessage2.txt  TestMessage20.txt  TestMessage23.txt  TestMessageSpecial.txt  testParser.sh
test/message-parser/negative-test-messages/: test-agent-id-from-codetable  test-agentid-codetable  test-content-byte-sequence-missing-message-param  test-content-byteseq-with-endline  test-content-bytesequence-unterminated  test-string-literal-missing-quotations  test-userdefined-performative-with-forbidden-space
test/messages/: inform  test-agentid  test-agentid-with-single-resolver  test-content-bytesequence  test-content-bytesequence.hexer  test-content-fail  test-multiple-parameters  test-reply-by-param  test-umlaut.readme
test/ruby/: CMakeLists.txt  benchmark.rb  test_interfaces.rb
test/unit-testing/: ACLMessageTest.cpp  ACLMessageTest.h  CMakeLists.txt  StateMachineTest.cpp  StateMachineTest.h  mytest.cpp
test/unit-testing/conversation_monitor/: CMakeLists.txt  StateMachineTest.h  StateMachineTestUtils.h  conversation_monitor_test.cpp  conversation_test.cpp  statemachine_test.cpp  test.cpp  utils.cpp  utils.h
test/unit-testing/generator/: ACLMessageTest.h  MainTest.cpp
test/unit-testing/messages/: CMakeLists.txt  acl_message.h  acl_message_test.cpp  envelope_test.cpp  message_test.cpp  message_test.h  test.cpp  test_utils.h
(+9 files in other folders)
